[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/drawCanvas.gd" type="Script" id=1]
[ext_resource path="res://ui/popupButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/program.gd" type="Script" id=3]
[ext_resource path="res://textures/ui/pan_pressed.png" type="Texture" id=4]
[ext_resource path="res://textures/ui/pencil.png" type="Texture" id=5]
[ext_resource path="res://textures/ui/eraser.png" type="Texture" id=6]
[ext_resource path="res://textures/ui/grid.png" type="Texture" id=7]
[ext_resource path="res://textures/ui/pan_normal.png" type="Texture" id=8]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="program" type="Node"]
script = ExtResource( 3 )

[node name="drawCanvas" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="drawCanvas"]
show_behind_parent = true
scale = Vector2( 25, 25 )
texture = ExtResource( 7 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="camera2D" type="Camera2D" parent="drawCanvas"]
offset = Vector2( -300, -150 )
anchor_mode = 0
current = true

[node name="uiLayer" type="CanvasLayer" parent="."]

[node name="vBoxContainer" type="VBoxContainer" parent="uiLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="HBoxContainer" parent="uiLayer/vBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="fileButton" parent="uiLayer/vBoxContainer/Options" instance=ExtResource( 2 )]
margin_right = 35.0
text = "File"
popupControl = NodePath("../../../fileDialog")

[node name="imageButton" parent="uiLayer/vBoxContainer/Options" instance=ExtResource( 2 )]
margin_left = 39.0
margin_right = 91.0
text = "Image"
popupControl = NodePath("../../../imageDialog")

[node name="hBoxContainer" type="HBoxContainer" parent="uiLayer/vBoxContainer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="uiLeftDock" type="PanelContainer" parent="uiLayer/vBoxContainer/hBoxContainer"]
margin_right = 64.0
margin_bottom = 576.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vBoxContainer" type="VBoxContainer" parent="uiLayer/vBoxContainer/hBoxContainer/uiLeftDock"]
margin_left = 7.0
margin_top = 7.0
margin_right = 57.0
margin_bottom = 569.0

[node name="colorPickerButton" type="ColorPickerButton" parent="uiLayer/vBoxContainer/hBoxContainer/uiLeftDock/vBoxContainer"]
margin_right = 50.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )

[node name="panButton" type="TextureButton" parent="uiLayer/vBoxContainer/hBoxContainer/uiLeftDock/vBoxContainer"]
margin_top = 24.0
margin_right = 50.0
margin_bottom = 56.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="pencilButton" type="TextureButton" parent="uiLayer/vBoxContainer/hBoxContainer/uiLeftDock/vBoxContainer"]
margin_top = 60.0
margin_right = 50.0
margin_bottom = 92.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="eraserButton" type="TextureButton" parent="uiLayer/vBoxContainer/hBoxContainer/uiLeftDock/vBoxContainer"]
margin_top = 96.0
margin_right = 50.0
margin_bottom = 128.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="referenceRect" type="ReferenceRect" parent="uiLayer/vBoxContainer/hBoxContainer"]
margin_left = 68.0
margin_right = 1024.0
margin_bottom = 576.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="fileDialog" type="PopupMenu" parent="uiLayer"]
margin_left = 2.0
margin_top = 20.0
margin_right = 103.0
margin_bottom = 75.0
custom_styles/panel = SubResource( 2 )
hide_on_item_selection = false
hide_on_checkable_item_selection = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panelContainer" type="PanelContainer" parent="uiLayer/fileDialog"]
margin_right = 14.0
margin_bottom = 14.0

[node name="marginContainer" type="MarginContainer" parent="uiLayer/fileDialog/panelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 96.0
margin_bottom = 95.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vBoxContainer" type="VBoxContainer" parent="uiLayer/fileDialog/panelContainer/marginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 79.0
margin_bottom = 78.0
mouse_filter = 0

[node name="newFile" type="Button" parent="uiLayer/fileDialog/panelContainer/marginContainer/vBoxContainer"]
margin_right = 69.0
margin_bottom = 20.0
text = "New File"

[node name="saveFile" type="Button" parent="uiLayer/fileDialog/panelContainer/marginContainer/vBoxContainer"]
margin_top = 24.0
margin_right = 69.0
margin_bottom = 44.0
text = "Save File"

[node name="loadFile" type="Button" parent="uiLayer/fileDialog/panelContainer/marginContainer/vBoxContainer"]
margin_top = 48.0
margin_right = 69.0
margin_bottom = 68.0
text = "Load File"

[node name="imageDialog" type="PopupMenu" parent="uiLayer"]
margin_left = 35.9484
margin_top = 20.4058
margin_right = 148.948
margin_bottom = 178.406
custom_styles/panel = SubResource( 3 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panelContainer" type="PanelContainer" parent="uiLayer/imageDialog"]
margin_right = 14.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="marginContainer" type="MarginContainer" parent="uiLayer/imageDialog/panelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 125.0
margin_bottom = 47.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vBoxContainer" type="VBoxContainer" parent="uiLayer/imageDialog/panelContainer/marginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 108.0
margin_bottom = 30.0

[node name="resizeImage" type="Button" parent="uiLayer/imageDialog/panelContainer/marginContainer/vBoxContainer"]
margin_right = 98.0
margin_bottom = 20.0
text = "Resize Image"

[node name="resizeDialog" type="PopupMenu" parent="uiLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = -64.0
margin_right = 82.0
margin_bottom = 47.0
custom_styles/panel = SubResource( 4 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panelContainer" type="PanelContainer" parent="uiLayer/resizeDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -55.0
margin_right = 77.0
margin_bottom = 55.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="marginContainer" type="MarginContainer" parent="uiLayer/resizeDialog/panelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 147.0
margin_bottom = 103.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vBoxContainer" type="VBoxContainer" parent="uiLayer/resizeDialog/panelContainer/marginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 130.0
margin_bottom = 86.0

[node name="widthBox" type="SpinBox" parent="uiLayer/resizeDialog/panelContainer/marginContainer/vBoxContainer"]
margin_right = 120.0
margin_bottom = 24.0
allow_greater = true
prefix = "width:"
suffix = "px"

[node name="heightBox" type="SpinBox" parent="uiLayer/resizeDialog/panelContainer/marginContainer/vBoxContainer"]
margin_top = 28.0
margin_right = 120.0
margin_bottom = 52.0
allow_greater = true
prefix = "height:"
suffix = "px"

[node name="hBoxContainer" type="HBoxContainer" parent="uiLayer/resizeDialog/panelContainer/marginContainer/vBoxContainer"]
margin_top = 56.0
margin_right = 120.0
margin_bottom = 76.0

[node name="cancel" type="Button" parent="uiLayer/resizeDialog/panelContainer/marginContainer/vBoxContainer/hBoxContainer"]
margin_right = 54.0
margin_bottom = 20.0
text = "Cancel"

[node name="confirm" type="Button" parent="uiLayer/resizeDialog/panelContainer/marginContainer/vBoxContainer/hBoxContainer"]
margin_left = 58.0
margin_right = 120.0
margin_bottom = 20.0
text = "Confirm"

[node name="fileSystemDialog" type="FileDialog" parent="uiLayer"]
visible = true
margin_left = 3.17838
margin_top = 21.1893
margin_right = 318.178
margin_bottom = 151.189
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="color_changed" from="uiLayer/vBoxContainer/hBoxContainer/uiLeftDock/vBoxContainer/colorPickerButton" to="." method="_on_colorPickerButton_color_changed"]
[connection signal="pressed" from="uiLayer/fileDialog/panelContainer/marginContainer/vBoxContainer/newFile" to="." method="_on_new_file_pressed"]
[connection signal="pressed" from="uiLayer/fileDialog/panelContainer/marginContainer/vBoxContainer/saveFile" to="." method="_on_save_file_pressed"]
[connection signal="pressed" from="uiLayer/fileDialog/panelContainer/marginContainer/vBoxContainer/loadFile" to="." method="_on_load_file_pressed"]
[connection signal="pressed" from="uiLayer/imageDialog/panelContainer/marginContainer/vBoxContainer/resizeImage" to="." method="_on_resize_image_pressed"]
[connection signal="pressed" from="uiLayer/resizeDialog/panelContainer/marginContainer/vBoxContainer/hBoxContainer/cancel" to="." method="_on_resize_dialog_cancel_pressed"]
[connection signal="pressed" from="uiLayer/resizeDialog/panelContainer/marginContainer/vBoxContainer/hBoxContainer/confirm" to="." method="_on_resize_dialog_confirm_pressed"]
[connection signal="file_selected" from="uiLayer/fileSystemDialog" to="." method="_on_fileSystemDialog_file_selected"]
